[package]
name = "netfs"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>" ]

[lib]
name = "netfs"
crate-type = ["rlib"]

[dependencies]
time = "*"
libc = "*"
log = "*"
regex = "*"
regex_macros = "*"

[dependencies.filesystem]
path = "../filesystem/"

[dependencies.fuse]
git = "https://github.com/zargony/rust-fuse.git"
